<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DialPad</string>
    <string name="action_download">Download new sounds</string>
    <string name="title_activity_dial_pad_view">DialPadView</string>
    <string name="button1Pressed">button1Pressed</string>
    <string name="button2Pressed">button2Pressed</string>
    <string name="button3Pressed">button3Pressed</string>
    <string name="button4Pressed">button4Pressed</string>
    <string name="button5Pressed">button5Pressed</string>
    <string name="button6Pressed">button6Pressed</string>
    <string name="button7Pressed">button7Pressed</string>
    <string name="button8Pressed">button8Pressed</string>
    <string name="button9Pressed">button9Pressed</string>
    <string name="buttonPPressed">buttonPPressed</string>
    <string name="button0Pressed">button0Pressed</string>
    <string name="buttonSPressed">buttonSPressed</string>
    <string name="title_activity_download">Download new sounds</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings_preference">Settings</string>
    <string name="settings_sound">Sound type</string>
    <string name="settings_soundtype">Voice</string>
    <string name="settings_voicefile">Voice file</string>
    <string name="settings_source">Source for new voices</string>
    <string name="settings_storage">Storage location</string>
    <string name="settings_delete">Delete voice</string>
    <string name="settings_currentVoice"></string>
    <string name="settings_currentStorage"></string>
    <string name="settings_currentSource"></string>

</resources>